[package]
name = "niceowner"
description = "A stupid library that allows you to own a value, even if it comes from a reference. No cloning."
license = "MIT"
repository = "https://github.com/AWeirdDev/niceowner"
readme = "README.md"
keywords = ["ownership", "reference", "own", "borrow"]
authors = ["AWeirdDev <aweirdscratcher@gmail.com>"]
categories = ["rust-patterns", "memory-management"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
